1_wfa/client/src/app/components/landing/landing.component.scss
@import '../../animations.scss';

.wrapper {
    position: absolute;
    width: 100vw;
}

.header {
    position: absolute;
    top: 10%;
    width: 100%;
    text-align: center;
    font-weight: 100;
    font-size: 175%;
    letter-spacing: 2px;
    color: white;
    animation: logoTransition 1.3s ease forwards;
}

.display-none {
    width: 0%;
}

#landing-feature {
    text-align: center;
    opacity: 0;
    animation: fadeIn 1.1s ease .8s forwards;
    color: white;
    font-size: 250%;
    font-weight: 100;
}

.margin-top-175 {
    margin-top: 175px;
    height: 50px;
}

.margin-top-300 {
    margin-top: 175px;
    height: 1px;
}


.landing-feature-items {
    display: flex;
    justify-content: space-around;
    margin-top: 120px;
    font-size: 41%;
    user-select: none;
}

.arts {
    margin-left: 10px;
}

.landing-content {
    color: white;
    letter-spacing: 1px;
    margin: auto;
    margin-top: 4rem;
    font-weight: 100;
    width: 96%;
    max-width: 1000px;
    opacity: 0;
    z-index: 11;
    border-radius: 13px;
    background-image: linear-gradient(0.31turn, #00d0ff, #0088ff);   
    animation: fadeIn 1.2s ease .7s forwards;
}

#first-content-box {
    margin-top: 300px;
}

.content-box {
    background-image: linear-gradient
    (rgb(255 165 0 / 0%), 
    rgb(16 0 255 / 42%));
    box-shadow: 0px 30px 50px -25px #000000;
    // margin: 17px 10px 40px 10px;
    border-radius: 13px;
    padding: 0px 5px 1px 5px;
}

.content-title {
    color: #e1fffd;
    text-align: center;
    padding: 1rem 1rem 0rem 1rem;
    font-size: 192%;
}

.content-text {
    color: #bffffc;
    padding: 0 10px;
    line-height: 1.6;
    width: 80%;
    margin: auto;
}

.landing-button-container {
    display: flex;
    justify-content: space-evenly;
    margin: 25px 0;
}

button {
    border: none;
    border-radius: 5px;
    width: 100px;
    color: #bffffc;
    font-weight: 100;
    letter-spacing: 1px;
    height: 42px;
    background-color: #ffffff1f;
}

.small-spacer {
    height: 75px;
    background-color: rgba(255, 255, 255, 0);
}

.click-here {
    color: white;
    font-size: 105%;
    // border: 1px solid lightgrey;
    padding: 4px 5px;
    background-color: rgba(0, 0, 0, 0.158);
    border-radius: 5px;
}

.get-rich {
    text-align: center;
    font-size: 200%;
}

